--- a/anidetection/pubspec.yaml
+++ b/anidetection/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   csv: ^6.0.0
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  image: ^4.2.0
+  intl: ^0.19.0
+  exif: ^3.3.0
 
 dev_dependencies:
   flutter_test:
