--- a/anidetection/pubspec.yaml
+++ b/anidetection/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   image: ^4.2.0
   intl: ^0.19.0
   exif: ^3.3.0
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: ^2.4.11
   custom_lint: ^0.6.4
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
