--- a/anidetection/pubspec.yaml
+++ b/anidetection/pubspec.yaml
@@ -51,10 +51,12 @@ dependencies:
   image: ^4.2.0
   intl: ^0.19.0
   exif: ^3.3.0
-  freezed: ^2.5.2
+  freezed: ^2.4.5
   freezed_annotation: ^2.4.2
   json_annotation: ^4.9.0
   uuid: ^4.4.0
+  css_colors: ^1.1.5
+  pytorch_lite: ^4.2.5
 
 dev_dependencies:
   flutter_test:
